2024-03-06  Matteo Corti  <matteo@corti.li>

        * check_updates: Fixed a bug with --quiet

2023-06-26  Matteo Corti  <matteo@corti.li>

        * check_updates (run): Fixed a bug when no $HOME is defined

2022-07-29  Matteo Corti  <matteo@corti.li>

        * check_updates (run): Better documentation of the --boot-check option

2022-07-21  Matteo Corti  <matteo@corti.li>

        * check_updates (check_yum): If the kernel version is critical and the updates are only a warning the exit code will be critical

2022-05-12  Matteo Corti  <matteo@corti.li>

        * check_updates: removed up2date (no more in use)

2022-02-01  Matteo Corti  <matteo@corti.li>

        * check_updates: removed a test message in the OK output

2022-01-17  Matteo Corti  <matteo@corti.li>

    * check_updates: added an option --assumeyes to allow the import of GPG keys

2022-01-13  Matteo Corti  <matteo@corti.li>

    * check_updates (run): --security-only and --number-only are not allowed together

2021-11-30  Matteo Corti  <matteo@corti.li>

     check_updates (run): better error message

2021-11-05  Matteo Corti  <matteo@corti.li>

    * check_updates (check_running_kernel): skip the kernel checks if the kernel is not installed with RPM

2021-09-15  Matteo Corti  <matteo@corti.li>

    * check_updates (run): adding user info to the debugging output

2021-09-02  Frank Schroeter

    * check_updates: Add support for AlmaLinux

2021-08-21  Ben Li  <bli@linsang.com>

    * check_updates: Add support for Rocky Linux

2021-07-22  Matteo Corti  <matteo@corti.li>

    * check_updates (run_command): LC_ALL=C

2021-05-19  Matteo Corti  <matteo@corti.li>

    * check_updates (debug): Debug to a file

2021-04-15  Matteo Corti  <matteo@corti.li>

    * check_updates: Added the --number-only option

2021-01-21  Matteo Corti  <matteo@corti.li>

    * check_updates (check_running_kernel): support for CentOSPlus

2020-06-19  Matteo Corti  <matteo@corti.li>
