@@ -1,3 +1,7 @@
+2024-10-14  Matteo Corti  <matteo@corti.li>
+
+        * check_updates (run_yum): Support for DNF5
+
 2024-03-06  Matteo Corti  <matteo@corti.li>
 
         * check_updates: Fixed a bug with --quiet
